# TubeExtract

./: .gitignore  CHANGELOG.md  QUALITY_VERIFICATION_REPORT_SPEC_STABILITY_002.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.claude/: settings.json
.claude/agents/moai/: builder-skill.md
.github/workflows/: e2e.yml  release.yml  test.yml
.moai/: manifest.json
.moai/cache/: quality_verification_result.xml
.moai/config/sections/: git-strategy.yaml  language.yaml  project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
.moai/project/codemaps/: data-flow.md  dependencies.md  (+3 more)
.moai/reports/: sync-report-SPEC-STABILITY-001.md  sync-report-SPEC-STABILITY-002.md
.moai/specs/: research-stability.md
e2e/: full-flow.spec.ts  i18n.spec.ts  playwright.config.ts
e2e/fixtures/: index.ts
e2e/pages/: QueuePage.ts  SettingsPage.ts  SetupPage.ts
e2e/tests/: queue.spec.ts  settings.spec.ts  setup.spec.ts
electron/: main.mjs  preload.mjs
scripts/: release.js
src/: App.tsx  electron.d.ts  index.css  main.tsx  tauri.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dependencies.rs  diagnostics.rs  download.rs  file_ops.rs  lib.rs  main.rs  metadata.rs  queue.rs  settings.rs  state.rs  types.rs  utils.rs
src-tauri/tests/: characterization_phase1.rs  characterization_phase2.rs  characterization_phase3.rs  stability_tests.rs  yt_dlp_integration.rs
src/renderer/: types.ts
src/test/: setup.ts
(+65 files in other folders)
