[package]
name = "tubeextract"
version = "0.1.0"
description = "TubeExtract desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "tubeextract_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6"
fs2 = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
